--- a/apps/ios/ChangeLog
+++ b/apps/ios/ChangeLog
@@ -8,3 +8,4 @@
 0.08: Added more app identifiers, added 'cannot display' in case a message goes empty because of replacements
 0.09: Enable 'ams' on new firmwares (ams/ancs can now be enabled individually) (fix #1365)
 0.10: Added more bundleIds
+1.13: zerodogg hack
